[package]
name = "sovereign-multiplicity"
version = "0.1.0"
edition = "2021"
description = "Quantum algorithms: QFT, Grover, Shor, QPE"
license = "MIT OR Apache-2.0"
authors = ["SnapKitty Collective"]
repository = "https://github.com/SNAPKITTYWEST/sovereign-multiplicity"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
